--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -8,7 +8,6 @@ body {
     margin:0;
     color:#262626;
     transition: background-color 0.5s;
-
 }
 .dark-mode {
     background-color: #262626;
@@ -37,6 +36,11 @@ body {
 a {
     text-decoration: none;
     color: #262626;
+    transition: 0.4s;
+}
+
+a:hover {
+    border-bottom: 3px solid;
 }
 
 button {
