--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -4,29 +4,29 @@ p {
 }
 
 body {
-    background-color: #F2F2F2;
+    background-color: #ffffff;
     margin:0;
-    color:#262626;
+    color:#1d1d1d;
     transition: background-color 0.5s;
 }
 .dark-mode {
-    background-color: #262626;
-    color: #F2F2F2;
+    background-color: #1d1d1d;
+    color: #ffffff;
   }
 
 .dark-mode a {
         text-decoration: none;
-        color: #f2f2f2;
+        color: #ffffff;
 }
 
 .dark-mode footer{
-    background-color: #f2f2f2;
+    background-color: #2c2c2c;
 }
 
 .dark-mode button {
     border:none;
     background-color:transparent;
-    color:#F2F2F2;
+    color:#ffffff;
 }
 
 .dark-mode hr {
@@ -36,11 +36,6 @@ body {
 a {
     text-decoration: none;
     color: #262626;
-    transition: 0.4s;
-}
-
-a:hover {
-    border-bottom: 3px solid;
 }
 
 button {
@@ -122,7 +117,6 @@ h2 {
 img {
     height: 400px;
     width: 650px;
-    border-radius: 15pt;
 }
 
 p {
@@ -131,7 +125,33 @@ p {
 }
 
 footer {
-    background-color: #262626;
-    height: 400px;
+    background-color: #e8e8e8;
     margin-top: 7%;
+    padding: 2% 0% 4% 0%;
+}
+
+.contact-form {
+    margin: 3% 4% 0% 4%;
+    font-family: 'IBM Plex Serif', serif;
+    font-weight: 300;
+    font-size: 3rem;
+    line-height: 140%;
+    display:grid;
+}
+
+input {
+    border:none;
+    border-bottom: solid #1d1d1d;
+    background-color:#e8e8e8;
+    font-family: 'IBM Plex Serif', serif;
+    font-weight: 300;
+    font-size: 3rem;
+    height: 3.5rem;
+}
+
+input[type=submit] {
+    background-color:#1d1d1d;
+    height: 100px;
+    width: 100%;
+    color: white;
 }
