--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,17 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Serif:wght@300&display=swap');
-p {
-    font-family: 'IBM Plex Sans', sans-serif;
-}
+@import url("https://use.typekit.net/mee5nvp.css");
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono&family=Public+Sans:wght@300&display=swap');
 
 body {
-    background-color: #ffffff;
-    margin:0;
-    color:#1d1d1d;
-    transition: background-color 0.5s;
+    padding: 0rem 0rem 0rem 0rem;
+    margin: 0rem 0rem 0rem 0rem;
+    transition:.5s;
 }
+
 .dark-mode {
-    background-color: #1d1d1d;
+    background-color: #131313;
     color: #ffffff;
+    transition:.5s;
   }
 
 .dark-mode a {
@@ -19,139 +18,332 @@ body {
         color: #ffffff;
 }
 
+.dark-mode nav a {
+    background-color:#2c2c2c;
+}
+
+.dark-mode nav button {
+    background-color: transparent;
+    color:white;
+}
+
 .dark-mode footer{
     background-color: #2c2c2c;
 }
 
-.dark-mode button {
+.dark-mode h1 {
+    color:white;
+}
+
+.dark-mode p {
+    color:#898989;
+}
+
+.dark-mode h2 {
+    color:white;
+}
+
+.dark-mode .tile-text {
+    color:#898989;
+}
+
+nav button {
+    background-color:transparent;
     border:none;
-    background-color:transparent;
-    color:#ffffff;
-}
-
-.dark-mode hr {
-    color: #7e7e7e;
-}
-
-a {
-    text-decoration: none;
-    color: #262626;
-}
-
-button {
-    border: none;
-    background-color:transparent;
-  }
-
-.navigation {
-    font-family: 'IBM Plex Sans', sans-serif;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
-    margin: 1% 4% 1% 4%;
-    font-size:1.1rem;
-}
-
-.about {
-    display:flex;
-    flex-direction:row;
-    align-items:stretch;
-    flex-wrap:wrap;
-}
-
-.about-text {
-    margin-top:3%;
-    max-width: 600px;
-}
-
-hr {
-    width: 100%;
-    border:0.5px solid;
-    color:#afafaf;
 }
 
 h1 {
-    margin: 3% 4% 10% 4%;
-    font-family: 'IBM Plex Serif', serif;
-    font-weight: 300;
+    font-family: source-serif-pro, serif;
+    color: #1D1D1D;
     font-size: 3rem;
-    max-width: 1000px;
-    line-height: 115%;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 120%;
+    max-width: 950px;
+    padding: 0rem 6rem 0rem 6rem;
 }
 
 h2 {
-    margin: 3% 0% 2% 4%;
-    font-family: 'IBM Plex Serif', serif;
-    font-weight: 300;
+    font-family: source-serif-pro, serif;
+    color: #1D1D1D;
     font-size: 2rem;
-    width: 70%;
-    line-height: 130%;
-}
-
-.projects {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin: 1% 4% 1% 4%;
-}
-
-.tiles {
-    margin-bottom: 7%;
-}
-
-.tiles img {
-    transition: transform .2s ease-in-out;
-}
-
-.tiles img:hover {
-    transform:scale(1.05);
-}
-
-.tile-text {
-    margin-top: 5px;
-    max-width: 650px;
-}
-
-img {
-    height: 400px;
-    width: 650px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 120%;
+    max-width: 65%;
 }
 
 p {
+    font-family: 'Public Sans', sans-serif;
+    font-style: normal;
     line-height: 150%;
-    font-size:1.1rem;
+    font-size: 1.05rem;
+    color: #5B5B5B; 
+}
+
+#intro {
+    padding-top: 5rem;
+}
+
+.italic-blue {
+    font-family: source-serif-pro, serif;
+    color: #377EF7;
+    font-size: 3rem;
+    font-style: italic;
+    font-weight: 300;
+    line-height: 120%;
+    max-width: 20em;
+}
+
+.italic-blue:hover {
+    font-style: normal;
+}
+
+.navigation div {
+    padding: 2rem 0rem 2rem 2rem;
+    display:inline;
+    float:right;
+    align-items:center;
+}
+
+a:hover {
+    position: relative;
+}
+
+#seattle {
+    position: relative;
+    display: inline-block;
+}
+
+#seattle:hover::after {
+    content: url(../images/seattle-rain.gif);
+    display: block;
+    position: absolute;
+    top: 100%; /* Position the image below the text */
+    left: 50%; /* Center the image horizontally */
+    transform: translateX(-50%); /* Adjust for centering */
+}
+
+#cats {
+    position: relative;
+    display: inline-block;
+}
+
+#cats:hover::after {
+    content: url(../images/cats.gif);
+    display: block;
+    position: absolute;
+    top: 100%; /* Position the image below the text */
+    left: 50%; /* Center the image horizontally */
+    transform: translateX(-50%); /* Adjust for centering */
+}
+
+nav a {
+    font-family: 'DM Mono', monospace;
+    font-style: normal;
+    font-weight:400;
+    font-size: .9rem;
+    color: #1D1D1D;
+    text-decoration: none;
+    background-color: #f3f3f3;
+    padding: .5em 1em .5em 1em;
+    border-radius: .5rem;
+}
+
+nav a:hover {
+    background-color: #377EF7;
+    color:white;
+    transition-duration: .5s;
+}
+
+nav {
+    height: 3rem;
+    padding-right: 6rem;
+}
+
+.tile-text {
+    font-family: 'Public Sans', sans-serif;
+    font-style: normal;
+    line-height: 150%;
+    font-size: 1.05rem;
+    color: #5B5B5B; 
+    padding-bottom: 2rem;
+}
+
+.tiles {
+    max-width: 48%;
+    padding: 3rem 0rem 0rem 0rem;
+}
+
+.tiles img:hover {
+    transform:scale(.95);
+}
+
+.tiles img {
+    max-width: 100%;
+    transition: transform .2s ease-in-out;
+}
+
+.projects {
+    padding: 3rem 6rem 6rem 6rem;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0rem 6rem 0rem 6rem;
+}
+
+.grid-row {
+    display: flex;
+    width: 100%;
+}
+
+.grid-cell {
+    font-family: 'Public Sans', sans-serif;
+    color:#5B5B5B;
+    font-size: 1.05rem;
+    flex: 1;
+    padding: 1rem;
+    border-bottom: solid .5px #898989;
+}
+
+
+.dark-mode .grid-cell {
+    color:#898989;
+    border-bottom: solid .5px #5B5B5B;
+}
+
+.cell-heading {
+    font-family: 'DM Mono', monospace;
+    font-style: normal;
+    font-weight:400;
+    font-size: .9rem;
+}
+
+.wider-cell {
+    flex:2;
 }
 
 footer {
-    background-color: #e8e8e8;
-    margin-top: 7%;
-    padding: 2% 0% 4% 0%;
+    background-color: #F2F2F2;
+    margin-top: 12rem;
 }
 
-.contact-form {
-    margin: 3% 4% 0% 4%;
-    font-family: 'IBM Plex Serif', serif;
-    font-weight: 300;
-    font-size: 3rem;
-    line-height: 140%;
-    display:grid;
-}
-
-input {
-    border:none;
-    border-bottom: solid #1d1d1d;
-    background-color:#e8e8e8;
-    font-family: 'IBM Plex Serif', serif;
-    font-weight: 300;
-    font-size: 3rem;
-    height: 3.5rem;
-}
-
-input[type=submit] {
-    background-color:#1d1d1d;
-    height: 100px;
+.ticker-wrap {
     width: 100%;
-    color: white;
-}
+    height: 80px;
+    margin: 0 auto;
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+    bottom: 0;
+    height: 3rem;
+    background-color: #377EF7
+  }
+  .ticker {
+    display: inline-block;
+    margin-top: 15px;
+    animation: marquee 20s linear infinite;
+  }
+  .item-collection-1 {
+    position: relative;
+    left: 0%;
+    animation: swap 20s linear infinite;
+  }
+  
+  .item {
+    display: inline-block;
+    padding: 0 1rem;
+    font-size: .9rem;
+    color: white; 
+    font-weight: 400;
+    font-family: 'DM Sans', monospace;
+  }
+  
+  /* Transition */
+  @keyframes marquee {
+    0% {
+      transform: translateX(0)
+    }
+    100% {
+      transform: translateX(-100%)
+    }
+  }
+  
+  @keyframes swap {
+    0%, 50% {
+      left: 0%;
+    }
+    50.01%,
+    100% {
+      left: 100%;
+    }
+  }
+
+  .about-section img {
+    max-width: 400px;
+  }
+
+  .about-section {
+    display:flex;
+    align-items: center;
+    gap:6rem;
+    padding: 6rem 12rem 6rem 12rem;
+  }
+
+  #about-me {
+    max-width:50%;
+  }
+
+  @media (max-width: 1000px) {
+    .about-section {
+        flex-direction: column;
+        gap:0rem;
+        padding: 6rem 3rem 6rem 3rem;
+    }
+  }
+
+  @media (max-width: 760px) {
+    h1 {
+        font-size: 2rem;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 120%;
+        max-width: 760px;
+        padding: 0rem 3rem 0rem 3rem;
+    }
+
+    .italic-blue {
+        font-size:2rem;
+    }
+    
+    nav {
+        padding-right: 3rem;
+    }
+    .projects {
+        padding: 6rem 3rem 3rem 3rem;
+    }
+    .tiles {
+        max-width:100%;
+        padding-top: 1rem;
+    }
+    .grid-container {
+        padding: 6rem 3rem 0rem 3rem;
+    }
+    .about-section {
+        flex-direction: column;
+        gap:0rem;
+        padding: 6rem 3rem 6rem 3rem;
+    }
+    #about-me {
+        max-width:100%;
+    }
+    .about-section img {
+        max-width:70%;
+    }
+  }
