--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -306,20 +306,28 @@ footer {
         gap:0rem;
         padding: 6rem 3rem 6rem 3rem;
     }
+
+    h1 {
+        font-size: 2.5rem;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 120%;
+        max-width: 760px;
+    }
+
+    #seattle {
+        font-size: 2.5rem;
+    }
+
+    #cats {
+        font-size: 2.5rem;
+    }
   }
 
   @media (max-width: 760px) {
     h1 {
         font-size: 2rem;
-        font-style: normal;
-        font-weight: 300;
-        line-height: 120%;
-        max-width: 760px;
         padding: 0rem 3rem 0rem 3rem;
-    }
-
-    .italic-blue {
-        font-size:2rem;
     }
     
     nav {
@@ -345,5 +353,12 @@ footer {
     }
     .about-section img {
         max-width:70%;
+    }
+    #seattle {
+        font-size: 2rem;
+    }
+
+    #cats {
+        font-size: 2rem;
     }
   }
