--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -379,4 +379,10 @@ footer {
         float:left;
         padding:2rem 1rem 2rem 0rem;
     }
+    .tile-text {
+        display:none;
+    }
+    .tiles {
+        padding-bottom: 3rem;
+    }
   }
