--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,7 +1,5 @@
 @import url("https://use.typekit.net/mee5nvp.css");
-@import url('https://fonts.googleapis.com/css2?family=DM+Mono&family=Public+Sans:wght@300&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Inter:wght@100..900&display=swap');
 body {
     padding: 0rem 0rem 0rem 0rem;
     margin: 0rem 0rem 0rem 0rem;
@@ -27,13 +25,12 @@ h1 {
 
 #project-title {
     margin-top:5rem;
-    margin-bottom:5rem;
 }
 
 .project-details {
     display:flex;
     flex-direction:row;
-    margin: 0 6rem 2rem 6rem;
+    margin: 0 6rem;
     max-width: 950px;
     justify-content: space-between;
 }
@@ -81,7 +78,7 @@ h2 {
     font-size: 2rem;
     font-style: normal;
     font-weight: 300;
-    line-height: 80%;
+    margin-bottom:0.75rem;
     max-width: 65%;
 }
 
@@ -89,9 +86,8 @@ h2 {
     cursor: pointer;
     border-top:1px solid #898989;
     width: 100%;
-    font-family: 'Public Sans', sans-serif;
+    font-family: 'Inter', sans-serif;
     color:#3E3E3E;
-    font-size: 1.05rem;
     display:flex;
     padding: 20px 0px 20px 0px;
 }
@@ -152,16 +148,12 @@ h2 {
     padding: 20px 0px 40px 0px; /* Maintain padding */
 }
 
-::selection {
-    color: white;
-    background: #3E3E3E;
-  }
 
 p {
-    font-family: 'Public Sans', sans-serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
+    font-weight:400;
     line-height: 150%;
-    font-size: 1.05rem;
     color: #3E3E3E;
 }
 
@@ -171,7 +163,7 @@ p {
 
 .italic-blue {
     font-family: source-serif-pro, serif;
-    color: #3E3E3E;
+    color: #377EF7;
     font-size: 3rem;
     font-style: italic;
     font-weight: 300;
@@ -301,14 +293,9 @@ nav {
 
 
 footer {
-    background-color: #F4F2EC;
-    margin-top: 12rem;
-}
+    margin-top:10rem;
 
-.gray {
-    color:#9E9E9E;
 }
-
 
 .ticker-wrap {
     width: 100%;
@@ -319,7 +306,7 @@ footer {
     position: relative;
     bottom: 0;
     height: 3rem;
-    background-color: #3E3E3E;
+    background-color: #F4F2EC;
   }
   .ticker {
     display: inline-block;
@@ -336,7 +323,7 @@ footer {
     display: inline-block;
     padding: 0 1rem;
     font-size: .9rem;
-    color: white; 
+    color: #3E3E3E;
     font-weight: 400;
     font-family: 'DM Sans', monospace;
   }
@@ -361,35 +348,11 @@ footer {
     }
   }
 
-  .about-section img {
-    max-width: 400px;
-  }
-
-  .about-section {
-    display:flex;
-    padding: 4rem 6rem;
-    justify-content:center;
-  }
-
-  .about-section a {
-    color: #3E3E3E;
-
-  }
-
   .scroll {
         overflow: auto;
         white-space: nowrap;
   }
   
-
-  #about-me {
-    max-width:60%;
-  }
-  #about-me h2 {
-    max-width:100%;
-}
-
-
 
 
 
@@ -399,9 +362,6 @@ footer {
 
   @media (max-width: 1000px) {
 
-    #about-me h2 {
-        max-width:100%;
-    }
 
     h1 {
         font-size: 2.5rem;
@@ -424,14 +384,6 @@ footer {
     .container {
         margin: 5rem 3rem 0rem 3rem;
 
-    }
-
-    .about-section {
-        padding: 4rem 3rem;
-    }
-
-    #about-me {
-        max-width:100%;
     }
 
     .grid-item3 {
@@ -475,21 +427,7 @@ footer {
     .grid-container {
         padding: 6rem 3rem 0rem 3rem;
     }
-    .about-section {
-        flex-direction: column;
-        gap:0rem;
-        padding: 4rem 3rem 4rem 3rem;
-    }
-    #about-me {
-        max-width:100%;
-    }
-    #about-me h2 {
-        max-width:100%;
-        padding-top:1rem;
-    }
-    .about-section img {
-        max-width:100%;
-    }
+
     #seattle {
         font-size: 2.2rem;
     }
@@ -567,21 +505,7 @@ footer {
     .grid-container {
         padding: 4rem 2rem 0rem 2rem;
     }
-    .about-section {
-        gap:0rem;
-        padding: 2rem 1.5rem;
-    }
-    #about-me {
-        max-width:100%;
-    }
-    #about-me h2 {
-        max-width:100%;
-        padding-top:1rem;
-        font-size: 1.5rem;
-    }
-    .about-section img {
-        max-width:100%;
-    }
+
     #seattle {
         font-size: 1.5rem;
     }
