--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,9 +1,8 @@
 @import url("https://use.typekit.net/mee5nvp.css");
 @import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Inter:wght@100..900&display=swap');
 body {
-    padding: 0rem 0rem 0rem 0rem;
-    margin: 0rem 0rem 0rem 0rem;
-    transition:.5s;
+    padding: 0rem;
+    margin: 0rem;
     background-color: #FFFEFA;
 }
 
@@ -20,7 +19,12 @@ h1 {
     font-weight: 300;
     line-height: 120%;
     max-width: 950px;
-    padding: 0rem 6rem 0rem 6rem;
+    padding: 0rem 9rem 0rem 9rem;
+}
+
+.gray {
+    color:#3E3E3E75;
+    line-height:100%;
 }
 
 #project-title {
@@ -30,7 +34,7 @@ h1 {
 .project-details {
     display:flex;
     flex-direction:row;
-    margin: 0 6rem;
+    margin: 0 9rem;
     max-width: 950px;
     justify-content: space-between;
 }
@@ -38,14 +42,14 @@ h1 {
 .project-section {
     display:flex;
     flex-direction:row;
-    padding: 6rem 6rem 3rem 6rem;
+    padding: 6rem 9rem 3rem 9rem;
     justify-content: flex-end; /* Aligns items to the start (left) */
     gap:5em;
 }
 
 .project-section-2 {
     display:flex;
-    padding: 4rem 6rem 2rem 6rem;
+    padding: 4rem 9rem 2rem 9rem;
 }
 
 .project-section-2 img {
@@ -84,7 +88,7 @@ h2 {
 
 .accordion {
     cursor: pointer;
-    border-top:1px solid #898989;
+    border-top:1px solid #3e3e3e40;
     width: 100%;
     font-family: 'Inter', sans-serif;
     color:#3E3E3E;
@@ -93,12 +97,12 @@ h2 {
 }
 
 .container {
-    margin: 0rem 6rem 0rem 6rem;
-    border-bottom: 1px solid #898989;
+    margin: 0rem 9rem;
+    border-bottom: 1px solid #3e3e3e40;
 }
 
 .grid-item1 {
-    flex: 2; 
+    flex: 1.5; 
     text-align: left;
 }
 
@@ -170,7 +174,6 @@ p {
     line-height: 120%;
     max-width: 20em;
     text-decoration:none;
-
 }
 
 .italic-blue:hover {
@@ -202,7 +205,7 @@ a:hover {
     font-family: 'DM Mono', monospace;
     font-style: normal;
     font-weight:400;
-    font-size: .9rem;
+    font-size: .8rem;
     color: white;
     background-color: #3E3E3E30;
     padding: .5em 1em .5em 1em;
@@ -275,7 +278,12 @@ nav {
 .tiles img {
     max-width: 100%;
     cursor:pointer;
+    border-radius:20px;
+    margin-bottom:3px;
+}
 
+.tile-text {
+    padding:7px;
 }
 
 .tiles img:hover{
@@ -285,7 +293,7 @@ nav {
 }
 
 .projects {
-    padding: 3rem 6rem 6rem 6rem;
+    padding: 2rem 9rem 6rem 9rem;
     display:flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -306,7 +314,7 @@ footer {
     position: relative;
     bottom: 0;
     height: 3rem;
-    background-color: #F4F2EC;
+    background-color: #377EF7;
   }
   .ticker {
     display: inline-block;
@@ -322,8 +330,8 @@ footer {
   .item {
     display: inline-block;
     padding: 0 1rem;
-    font-size: .9rem;
-    color: #3E3E3E;
+    font-size: .8rem;
+    color: #FFFEF9;
     font-weight: 400;
     font-family: 'DM Sans', monospace;
   }
@@ -473,7 +481,6 @@ footer {
     #project-title{
         margin-bottom:0;
     }
-
   }
 
 
@@ -507,10 +514,10 @@ footer {
     }
 
     #seattle {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
     #cats {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
     footer {
         margin-top:0rem;
