decreased mobile accordion type size

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -559,6 +559,10 @@ footer {
         object-fit: cover;
     }
 
+    .accordion {
+        font-size:14px;
+
+    }
 
     p {
         font-size:14px;
