--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -477,6 +477,13 @@ footer {
     #project-title{
         margin-bottom:0;
     }
+    .accordion.active + .panel {
+        max-height: 400px; /* Adjust this to the maximum height of your content */
+        padding: 0px 0px 30px 0px; /* Maintain padding */
+    }
+    .panel {
+        gap:.5rem;
+    }
   }
 
 
