--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -3,7 +3,7 @@
 body {
     margin: 0rem;
     background-color: white;
-    cursor: url('/images/cursor.png'), auto;
+    cursor: url('/images/cursor.svg'), auto;
 }
 
 .main {
