--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -4,6 +4,9 @@ body {
     margin: 0rem;
     background-color: white;
     cursor: url('/images/cursor.svg'), auto;
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 .main {
@@ -150,6 +153,13 @@ h2 {
     flex-direction: row; /* This can be adjusted based on your layout needs */
     justify-content: space-between;
     gap:5rem;
+    width: 100%;
+
+}
+
+::selection{
+    background-color:#377EF7;
+    color:white;
 }
 
 .panel img {
@@ -171,6 +181,14 @@ p {
     font-weight:400;
     line-height: 150%;
     color: #3E3E3E;
+}
+
+p a {
+    color:#377EF7;
+}
+
+p a:hover {
+    color:#3E3E3E;
 }
 
 #intro {
@@ -368,6 +386,15 @@ footer p {
     }
   }
 
+  @keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
   .scroll {
         overflow: auto;
         white-space: nowrap;
@@ -377,8 +404,9 @@ footer p {
   }
 
   .scroll img {
-    max-width:40%;
-  }
+    width: 100%;
+    height: auto;
+}
   
 
 
