--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -14,6 +14,7 @@ body {
     
 }
 
+
 nav button {
     background-color:transparent;
     border:none;
@@ -34,7 +35,7 @@ h1 {
 }
 
 .gray {
-    color:#3E3E3E75;
+    color:#3E3E3E !important;
     line-height:100%;
 }
 
@@ -88,7 +89,7 @@ h1 {
 
 h2 {
     font-family: Inter, sans serif;
-    color: #3e3e3e75;
+    color:#3E3E3E85;
     font-size: 1rem;
     font-style: normal;
     font-weight: 400;
@@ -301,7 +302,10 @@ nav {
     max-width: 48%;
     padding: 3rem 0rem 0rem 0rem;
     padding-bottom: 2rem;
+}
 
+.tile-text p {
+    color:#3E3E3E85;
 }
 
 .tiles img {
