--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -20,11 +20,11 @@ nav button {
 h1 {
     font-family: source-serif-pro, serif;
     color: #3E3E3E;
-    font-size: 3.2rem;
+    font-size: 2.7rem;
     font-style: normal;
     font-weight: 300;
     line-height: 120%;
-    max-width: 1000px;
+    max-width: 900px;
 }
 
 .mobile{
@@ -201,7 +201,7 @@ p a:hover {
 .italic-blue {
     font-family: source-serif-pro, serif;
     color: #377EF7;
-    font-size: 3.2rem;
+    font-size: 2.7rem;
     font-style: italic;
     font-weight: 300;
     line-height: 120%;
@@ -283,19 +283,13 @@ nav a {
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight:400;
-    font-size: .75rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
     color: #3E3E3E;
     text-decoration: none;
-    background-color: #F4F3EE;
-    padding: .5em 1em .5em 1em;
-    border-radius: .5rem;
+    padding: 0 .5em;
 }
 
 nav a:hover {
-    background-color: #377EF7;
-    color:white;
+    color:#377EF7;
     transition-duration: .5s;
 }
 
