Added about page

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -107,6 +107,33 @@ body {
     
 }
 
+#about {
+    max-width:900px;
+    color: #3E3E3E90;
+
+}
+
+body.dark-mode #about {
+    color: rgba(255, 255, 255, 0.50);
+
+}
+
+.about-details {
+    padding-top:6rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap:5rem;
+    justify-content: space-between;
+    margin:0 9rem;
+}
+
+.column {
+    justify-self: start;
+}
+
+.column p {
+    color: #3E3E3E90;
+}
 
 nav button {
     background-color:transparent;
@@ -520,6 +547,15 @@ footer p {
         display:none;
     }
 
+    .about-details {
+        padding-top:4rem;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap:2rem;
+        justify-content: space-between;
+        margin:0 3rem;
+    }
+
     .main {
         padding: 0rem 3rem;
     }
@@ -565,6 +601,8 @@ footer p {
     max-width:100% !important;
 }
 
+
+
   }
 
 
@@ -575,6 +613,16 @@ footer p {
     }
     h1 {
         font-size: 2.2rem;
+    }
+
+    .about-details {
+        padding-top:4rem;
+        padding-bottom:4rem;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap:2rem;
+        justify-content: space-between;
+        margin:0 3rem;
     }
 
     .mobile {
@@ -655,6 +703,16 @@ footer p {
 
 
   @media (max-width: 500px) {
+
+    .about-details {
+        padding-top:4rem;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap:1rem;
+        justify-content: space-between;
+        margin:0 1rem;
+    }
+
     .main {
         padding: 0rem 1rem; 
     }
