--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -119,6 +119,10 @@ body.dark-mode #about {
 
 }
 
+body.dark-mode .about-details{
+    border-top:1px solid rgba(255, 255, 255, 0.20);
+}
+
 .about-details {
     border-top:1px solid #3e3e3e40;
     padding-top:1rem;
@@ -145,7 +149,7 @@ nav button {
 h1 {
     font-family: source-serif-pro, serif;
     color: #3E3E3E;
-    font-size: 2.7rem;
+    font-size: 2.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: 120%;
@@ -326,7 +330,7 @@ p a:hover {
 .italic-blue {
     font-family: source-serif-pro, serif;
     color: #377EF7;
-    font-size: 2.7rem;
+    font-size: 2.8rem;
     font-style: italic;
     font-weight: 300;
     line-height: 120%;
