text align update

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -260,6 +260,7 @@ p a {
     justify-content: center;
     align-items: center;
     height:100vh;
+    text-align: center;
 }
 
 /* Accordion and Container */
