--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -174,6 +174,14 @@ nav button {
     padding:0 !important;
 }
 
+.left-nav a {
+    color:#377EF7;
+}
+
+.left-nav :hover {
+    text-decoration:underline;
+}
+
 .right-nav {
     display: flex;
 }
