--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -340,7 +340,7 @@ footer div {
 }
 
 .image-panel {
-    flex: 1.75;
+    flex: 1.5;
     box-sizing: border-box;
     overflow-y: auto;
 }
@@ -375,8 +375,21 @@ footer div {
     }
 
     .about-details {
+        gap:3rem;
+    }
+    .sidebar {
+        flex:1; /* Adjust the width as needed */
+    }
+
+    .project-container {
         gap:2rem;
     }
+    
+    .image-panel {
+        flex: 1;
+    }
+
+
 }
 
 
@@ -414,9 +427,15 @@ footer div {
         display:none;
     }
 
+    
+
 }
 
 @media (max-width: 760px) {
+
+    .project-container {
+        flex-direction:column;
+    }
 
     .desktop {
         display:none;
@@ -428,10 +447,6 @@ footer div {
 
     #intro {
         padding:1.5rem 0 3rem 0;
-    }
-
-    .project-container {
-        flex-direction:column;
     }
     .navigation div {
         padding-left:2rem;
