--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,6 +1,11 @@
 @import url("https://use.typekit.net/mee5nvp.css");
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&display=swap');
 
+html {
+    margin:    0 auto;
+    max-width: 1600px;
+}
+
 /* General Styles */
 body {
     margin: 0;
