--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -49,7 +49,7 @@ body.dark-mode .project-item1,
 body.dark-mode .project-item2,
 body.dark-mode .project-item3,
 body.dark-mode .project-item4 {
-    background-color:#252525;
+    background-color:#313131;
 }
 
 
@@ -123,7 +123,7 @@ body.dark-mode .hover-underline-animation:after {
   }
   
   .project-item1, .project-item2, .project-item3, .project-item4 {
-    background-color: #EBEBEB;
+    background-color: #E5E5E5;
     aspect-ratio: 1;
     display: flex;
     justify-content: center;
