--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -401,7 +401,7 @@ footer div {
 }
 
 
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
     .main {
         padding:0 3rem;
     }
@@ -454,7 +454,7 @@ footer div {
     }
 
     #intro {
-        padding:1.5rem 0 3rem 0;
+        padding:1.5rem 0 1.5rem 0;
     }
     .navigation div {
         padding-left:2rem;
@@ -518,6 +518,7 @@ footer div {
 
     .navigation div {
         padding-left:1rem;
+        padding-top:1rem;
     }
 
     footer {
